test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-oknil-owned.good
init-var-oknil-unmanaged-from-oknil-owned.chpl:9: error: cannot initialize variable 'lhs' of type 'unmanaged MyClass?' from a 'owned MyClass?'
